--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/Clinsmann/mern-boilerplate#readme",
   "dependencies": {
-    "cookie-parse": "^0.4.0",
+    "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "passport-local": "^1.0.0"
   }
 }
