added route for static files

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#MONGO_DATABASE_URL=mongodb://localhost:27017/mernauth
-MONGO_DATABASE_URL=mongodb+srv://hillary-ibeanu-portfolio:YXiTtrdi2ZmRRUSO@cluster0-ts9ao.mongodb.net/hillary_ibeanu_portfolio
+MONGO_DATABASE_URL=mongodb://localhost:27017/mernauth
+#MONGO_DATABASE_URL=mongodb+srv://hillary-ibeanu-portfolio:YXiTtrdi2ZmRRUSO@cluster0-ts9ao.mongodb.net/hillary_ibeanu_portfolio
 PORT=5000
