--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ gen
 .idea/vcs.xml
 node_modules/
 .env
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
