--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.47",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "change-case": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -16,7 +23,10 @@
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
