--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^3.0.2",
     "validator": "^13.1.1"
   }
 }
